# OpenGL

./: CMakeLists.txt  README.md  README.txt
Casetta/: CMakeLists.txt  main.c
Door_OpenGL3/: CMakeLists.txt  main.cpp  shaders_loader.cpp  shaders_loader.h
Door_OpenGL3/lib/: RgbImage.cpp  RgbImage.h
Door_OpenGL3/shaders/: shader.frag  shader.vert
Esempi/backfaceculling/: main.cpp
Esempi/edge/: CMakeLists.txt
Esempi/icosaedro_suddiviso/: icosaedro_suddiviso.c
Esempi/primitive/: primitive.c
Esempi/rettangolo/: CMakeLists.txt
Esempi/triangolo/: CMakeLists.txt
Esempi/triangolo_array/: triangolo_array.c
Esempi_s3/backfaceculling/: CMakeLists.txt
Esempi_s3/colorbuffer/: colorbuffer.c
Esempi_s3/edge/: edge.c
Esempi_s3/triangle_strip/: CMakeLists.txt
Examples/esempi_serie_shader/opengl3/opengl3_triangolo/: CMakeLists.txt
Examples/serie11/Salvataggio-file-bmp/: RgbImage.cpp  RgbImage.h  TextureBMP.cpp  planet.cpp
Examples/serie11/image/: image.c
Examples/serie3/backfaceculling/: imageloader.h  main.cpp
House/: CMakeLists.txt  main.c  main.cpp
House/lib/: RgbImage.cpp
House_OpenGL3/: CMakeLists.txt  main.cpp
Other/Esempi_s3/backfaceculling/: imageloader.cpp  imageloader.h  main.cpp
Other/Esempi_s3/icosaedro_suddiviso/: CMakeLists.txt
Other/Esempi_s3/polys/: polys.c
Other/Esempi_s3/primitive/: CMakeLists.txt
Other/Esempi_s3/rettangolo/: rettangolo.c
Other/Esempi_s3/triangle_strip/: triangle_strip.c
Other/Esempi_s3/triangolo/: triangolo.c
Other/Esempi_s3/triangolo_array/: CMakeLists.txt
Other/Esempi_s4/double/: double.c
Other/Esempi_s4/glut_hello/: glut_hello.c
Other/Esempi_s4/sb2db/: sb2db.c
Other/Esempi_s4/text/: text.c
Other/Esempi_s4/wired_cube/: wired_cube.c
Other/s3_es1/: main.c
Other/s3_es2/: main.c
es1/: CMakeLists.txt  main.c
es2/: CMakeLists.txt  main.c
es3/: CMakeLists.txt
s3_es1/: CMakeLists.txt
s3_es2/: CMakeLists.txt
s4_es1/: CMakeLists.txt  main.c
